--- a/recyclon/pom.xml
+++ b/recyclon/pom.xml
@@ -51,6 +51,11 @@
 			<artifactId>hibernate-core-jakarta</artifactId>
 			<version>5.6.15.Final</version>
 		</dependency>
+		<dependency>
+		    <groupId>at.favre.lib</groupId>
+		    <artifactId>bcrypt</artifactId>
+		    <version>0.10.2</version>
+		</dependency>
 	</dependencies>
 
     <build>
